@@ -2,7 +2,7 @@
                           rksettingsmoduledebug -  description
                              -------------------
     begin                : Tue Oct 23 2007
-    copyright            : (C) 2007 by Thomas Friedrichsmeier
+    copyright            : (C) 2007, 2009 by Thomas Friedrichsmeier
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -21,6 +21,7 @@
 
 class RKSpinBox;
 class QButtonGroup;
+class KTemporaryFile;
 
 /**
 configuration for the Command Editor windows
@@ -46,6 +47,9 @@ public:
 	// static members are declared in debug.h and defined in main.cpp
 public slots:
 	void settingChanged (int);
+public:
+	// public for internal reason, only! Do not mess with this!
+	static KTemporaryFile* debug_file;
 private:
 	RKSpinBox* command_timeout_box;
 	RKSpinBox* debug_level_box;
